[gd_scene load_steps=9 format=3 uid="uid://bf1qmtr3n7rkt"]

[ext_resource type="Script" path="res://StartMenu.gd" id="1_ofwwf"]
[ext_resource type="AudioStream" uid="uid://dntg8j7ymjb0w" path="res://KH Menu Select.wav" id="2_0o6k4"]
[ext_resource type="AudioStream" uid="uid://b261ticfpxxtl" path="res://KH Select.wav" id="3_pap41"]
[ext_resource type="AudioStream" uid="uid://coid7urhb3atn" path="res://1-01 Dearly Beloved.mp3" id="4_pav0r"]

[sub_resource type="Theme" id="Theme_dsfbx"]
default_font_size = 31

[sub_resource type="LabelSettings" id="LabelSettings_4m3ao"]
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_lvtkj"]
font_size = 70

[sub_resource type="Theme" id="Theme_rs5by"]
default_font_size = 35

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofwwf")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 253.0
offset_top = 195.0
offset_right = 607.0
offset_bottom = 433.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dsfbx")

[node name="RichTextLabel" type="Label" parent="Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 65.0
offset_right = 232.0
offset_bottom = 161.0
text = "JOURN"
label_settings = SubResource("LabelSettings_4m3ao")
metadata/_edit_lock_ = true

[node name="RichTextLabel2" type="Label" parent="Control"]
layout_mode = 2
offset_left = 210.0
offset_top = 40.0
offset_right = 290.0
offset_bottom = 136.0
rotation = -0.523598
text = "EY"
label_settings = SubResource("LabelSettings_lvtkj")
metadata/_edit_lock_ = true

[node name="RichTextLabel3" type="Label" parent="Control"]
layout_mode = 2
offset_left = 247.0
offset_top = 103.0
offset_right = 331.0
offset_bottom = 199.0
rotation = 0.375515
text = "AL"
label_settings = SubResource("LabelSettings_lvtkj")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 673.0
offset_right = 780.0
offset_bottom = 764.0
theme = SubResource("Theme_rs5by")

[node name="NewButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start New"
alignment = 0

[node name="ExistingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Existing"
alignment = 0

[node name="Container" type="Container" parent="."]
layout_mode = 0
offset_left = 796.0
offset_top = 136.0
offset_right = 1490.0
offset_bottom = 794.0

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0o6k4")

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pap41")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pav0r")

[connection signal="mouse_entered" from="VBoxContainer/NewButton" to="." method="_on_new_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ExistingButton" to="." method="_on_existing_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ExistingButton" to="." method="_on_existing_button_pressed"]
